# hsync

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  hsync.cabal
app/: Main.hs
common/HSync/: Types.hs
hsync-client/: .gitignore  LICENSE  hsync-client.cabal
hsync-client/appsrc/: CLIOptions.hs  Main.hs
hsync-client/config/: default_sync.yaml  hsync.yaml
hsync-client/src/: Main.hs
hsync-client/src/HSync/Client/: AcidActions.hs  AcidSync.hs  ActionT.hs  Actions.hs  Conflict.hs  FSStatus.hs  HSyncClient.hs  Import.hs  LocalEvents.hs  Logger.hs  MergeTree.hs  RemoteEvents.hs  Sync.hs  SyncActions.hs  SyncedTree.hs  TemporaryIgnored.hs  TreeActions.hs
hsync-client/src/Yesod/: Client.hs
hsync-common/: hsync-common.cabal
hsync-common/src/HSync/Common/: AtomicIO.hs  DateTime.hs  FSTree.hs  FSTree2.hs  FSTreeZipper.hs  FileIdent.hs  Header.hs  HttpRequest.hs  Import.hs  MTimeTree.hs  MergeTree.hs  Notification.hs  NotificationTree.hs  TimedFSTree.hs  Types.hs
hsync-common/src/HSync/Common/FSTree/: Basic.hs  JSONInstances.hs  Zipper.hs
hsync-common/tests/: FSTree.hs  FSTreeTests.hs  test.hs
hsync-common/tests/Test/HSync/Common/: FSTree.hs
hsync-server/: .gitignore  Application.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs  devel.hs  hsync-server.cabal
hsync-server-api/: .gitignore  hsync-server-api.cabal  routes
hsync-server-api/src/HSync/: Server.hs
hsync-server-api/src/Yesod/: JoinPath.hs
hsync-server/Handler/: Auth.hs  FileActions.hs
hsync-server/app/: main.hs
hsync-server/config/: models  routes  settings.yml  sqlite.yml
hsync-server/scripts/: hsync-server.rc.d.FreeBSD  start.sh
hsync-server/src/HSync/Server/: AcidState.hs  AcidSync.hs  Application.hs  FileSystemState.hs  Foundation.hs  Import.hs  LocalAuth.hs  Model.hs  NotificationLog.hs  Notifications.hs  Settings.hs  User.hs
hsync-server/src/HSync/Server/Handler/: Acid.hs  Auth.hs  FileActions.hs  Home.hs  ViewTree.hs
hsync-server/src/HSync/Server/Settings/: Development.hs  StaticFiles.hs
hsync-server/templates/: default-layout-wrapper.hamlet  default-layout.hamlet  homepage.hamlet  loginForm.hamlet  path.hamlet  path.lucius  register.hamlet  userLoggedIn.hamlet  viewDirectory.hamlet  viewFile.hamlet  welcome.hamlet
src/HSync/: Diff.hs  FileTree.hs
src/HSync/FileTree/: Diff.hs
