cabal-version:      3.4
name:               hsync
version:            1.0.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common setup
    build-depends:
        base       >= 4.16.4.0
      , filepath   >= 1.4.100.0
      , containers >= 0.6.5.1
      , these      >= 1.1.1.1
      , lens       >= 5.2
      , directory  >= 1.3.8
      , time       >= 1.11.1.1
      , flat       >= 0.6

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

library
    import:           warnings, setup
    exposed-modules:
       HSync.FileTree
       HSync.FileTree.Diff
       HSync.Diff
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

executable hsync
    import:           warnings, setup
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        hsync

    hs-source-dirs:   app

test-suite hsync-test
    import:           warnings, setup
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
                  hsync
