name:              hsync-server
version:           0.0.0.0
synopsis:          Server for a Dropbox like file synchronization system
-- description:
author:            Frank Staals
maintainer:        frank@fstaals.net
homepage:          http://fstaals.net/software/hsync
category:          Network
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library

    hs-source-dirs: src

    exposed-modules: HSync.Server.Application
                     HSync.Server.Foundation
                     HSync.Server.AcidSync
                     HSync.Server.AcidState
                     HSync.Server.FileSystemState
                     HSync.Server.Import
                     HSync.Server.User
                     HSync.Server.Notifications
                     HSync.Server.Settings
                     HSync.Server.Settings.StaticFiles
                     HSync.Server.Settings.Development
                     HSync.Server.Handler.Home
                     HSync.Server.Handler.Auth
                     HSync.Server.Handler.FileActions
                     -- HSync.Server.Handler.Acid

    Extra-Source-Files: config/routes
                        config/settings.yml
                        config/sqlite.yml


    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5

                 -- The version of the API that we implement:
                 , hsync-server-api              == 0.1.0.0

                 , hsync-common                  >= 0.0.0.0    && < 0.2

                 , yesod                         >= 1.2.5.2    && < 1.3
                 , yesod-core                    >= 1.2.11     && < 1.3
                 , yesod-auth                    >= 1.3.0.2    && < 1.4
                 , yesod-static                  >= 1.2.2.4    && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4

                 , wai                           >= 2.1.0.1    && < 2.2
                 , wai-logger                    >= 2.1.1      && < 2.3
                 , wai-extra                     >= 2.1.1      && < 2.2

                 , warp                          >= 2.1.3      && < 3.0

                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 0.3

                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 1.2
                 , yaml                          >= 0.8        && < 0.9
                 , aeson                         >= 0.6.2.0    && < 0.7
                 , containers                    >= 0.5        && < 0.6

                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , stm                           >= 2.4.2      && < 2.5

                 , template-haskell


                 , hamlet                        >= 1.2        && < 1.3
                 , shakespeare                   >= 2.0.0.1    && < 2.1
                 , shakespeare-css               >= 1.1        && < 1.2
                 , shakespeare-js                >= 1.3        && < 1.4
                 , shakespeare-text              >= 1.1        && < 1.2
                 , hjsmin                        >= 0.1        && < 0.2

                 , monad-control                 >= 0.3        && < 0.4
                 , mtl                           >= 2.1.2      && < 2.3
                 , transformers                  >= 0.3        && < 0.4

                 , resourcet                     >= 1.1.1      && < 1.2
                 , http-conduit                  >= 2.1        && < 2.2
                 , conduit                       >= 1.1        && < 1.2
                 , conduit-extra                 >= 1.1        && < 1.2

                 , acid-state                    >= 0.12.1     && < 0.13
                 , safecopy                      >= 0.8.2      && < 0.9
                 , ixset                         >= 1.0.5      && < 1.1



executable         hsync-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , hsync-server
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , hsync-server
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
